Cgminer-Gekko + xtranonce support Add Gekoscience usb stick support
Merged and mod from Nicehash cgminer-ckolivas version



Signed-off-by: wareck <wareck@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -112,6 +112,10 @@ if HAS_ICARUS
 cgminer_SOURCES += driver-icarus.c
 endif
 
+if HAS_GEKKO
+cgminer_SOURCES += driver-gekko.c
+endif
+
 if HAS_KLONDIKE
 cgminer_SOURCES += driver-klondike.c
 endif
